src/assets/_scss/layout/_page_header.scss
#page-header {
  border-top: 5px solid $blue;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: $white;
  z-index: 1000;
}

#mainnav {
  .navbar-brand {
    width: 190px;
  }
}

#primarynav {
  .nav-item {
    padding-left: 20px;
    padding-right: 20px;
    .nav-link {
      color: $dark;
      position: relative;
      overflow: hidden;
      font-family: $font-family-secondary;
      font-size: 15px;
      &::after {
        content: "";
        position: absolute;
        display: block;
        bottom: 0;
        left: -100%;
        width: 100%;
        height: 2px;
        background-color: $orange;
        @include transition(0.5s);
      }
      &:hover,
      &.active {
        &::after {
          left: 0;
        }
      }
    }
  }
}

.navbar-toggler {
  display: block;
  height: 45px;
  width: 45px;
  margin: 0;
  background-color: transparent;
  float: none;
  z-index: 1000;
  pointer-events: all;
  text-align: center;
  border: 0;
  &:focus {
    outline: 0;
  }
  &.collapsed {
    .bar {
      &.close-one {
        transform: rotate(0);
        margin-top: 10px;
        margin-bottom: 0;
      }
      &.close-two {
        transform: rotate(0);
      }
      &.close-three {
        opacity: 1;
      }
    }
  }
  .bar {
    background: $gray-700;
    border-radius: 0;
    display: block;
    margin: 5px 0;
    width: 20px;
    height: 1px;
    @include transition(0.5s);
    &.close-one {
      transform: rotate(-45deg);
      margin-top: 10px;
      margin-bottom: -6px;
    }
    &.close-two {
      transform: rotate(45deg);
    }
    &.close-three {
      opacity: 0;
    }
  }
}

// Small devices (landscape phones, 576px and up)
@media (min-width: $screen-sm-min) {
}

// Medium devices (tablets, 768px and up)
@media (min-width: $screen-md-min) {
}

// Large devices (desktops, 992px and up)
@media (min-width: $screen-lg-min) {
  #primarynav {
    .nav-item {
      padding-left: 40px;
      padding-right: 40px;
    }
  }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: $screen-xl-min) {
}

